# trading-engine

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  app.py  build.sh  docker-compose.dev.yml  docker-compose.yml  render.yaml  requirements.txt  test_backtest.py  test_trading_engine.py
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  run_mcp.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: f5e101dcbc55_initial_migration.py
backend/app/: config.py  main.py
backend/app/api/v1/: alerts.py  market_data.py  router.py  rules.py  watchlist.py  websocket.py
backend/app/core/: database.py
backend/app/engine/: rule_engine.py
backend/app/mcp/: __init__.py  config.py  server.py
backend/app/mcp/resources/: __init__.py  data.py
backend/app/mcp/tools/: __init__.py  alerts.py  analysis.py  rules.py  watchlist.py
backend/app/models/: __init__.py  alert.py  rule.py  watchlist.py
backend/app/schemas/: __init__.py  alert.py  common.py  market_data.py  rule.py  watchlist.py
backend/app/services/: __init__.py  alert_generator.py  alpaca_client.py  stream_manager.py
backend/rules/: default_rules.yaml
backend/scripts/: run_mcp_server.py  seed_test_alerts.py  test_mcp_connection.py
backend/tests/: conftest.py
backend/tests/integration/: test_alert_generator_integration.py  test_websocket.py  test_workflows.py
backend/tests/integration/mcp/: conftest.py  test_alert_workflows.py  (+3 more)
backend/tests/unit/: test_alert_generator.py  test_api_alerts.py  test_api_rules.py  test_api_watchlist.py  test_rule_engine.py
(+36 files in other folders)
